css/cahnrs-core-css.css
/* ... */
/* Blue background */
div.pagebuilder-item.blue,
aside.pagebuilder-item.blue {
	background: rgba( 79, 134, 142, 0.85 );
	color: #fff;
}
/* Green background */
div.pagebuilder-item.green,
aside.pagebuilder-item.green {
	background: rgba( 143, 126, 53, 0.85 );
	color: #fff;
}
/* Orange background */
div.pagebuilder-item.orange,
aside.pagebuilder-item.orange {
	background: rgba( 182, 114, 51, 0.85 );
	color: #fff;
}
/* Yellow background */
div.pagebuilder-item.yellow,
aside.pagebuilder-item.yellow {
	background: rgba( 198, 146, 20, 0.85 );
	color: #fff;
}
.cahnrs-core-list {
	padding-bottom: 10px; 
}
.post-edit-link {
	font-size: 11px;
}
.cahnrs-core-list .cc-title > a {
	font-weight: bold;
	display: block;
	text-decoration: none;
	color: inherit; 
}
.cahnrs-core-list .cc-title > a:hover {
	text-decoration: underline; 
}
.cahnrs-core-list .cc-excerpt > a,
.cahnrs-core-list .cc-content > a {
	text-decoration: none;
	color: inherit; 
}
.cc-excerpt > a,
.cc-content > a {
	color: inherit; 
	cursor: text;
}
.cahnrs-core-list .cc-excerpt > a:hover,
.cahnrs-core-list .cc-content > a:hover {
	text-decoration: underline; 
}
.cahnrs-core-list .cc-edit-link > a {
	display: inline-block;
	padding-left: 10px;
}
/* Promo view */
.cahnrs-promo-view {
	padding: 10px 0;
	border-top: 1px solid #ddd;
}
.cahnrs-promo-view .cc-image-wrapper {
	width: 150px;
	float: left;
}
.cahnrs-promo-view .cc-image-wrapper img {
	width: 100%;
	height: auto;
	display: block;
}
.cahnrs-promo-view.has_image .cc-content-wrapper {
	margin-left: 165px;
}
.cahnrs-promo-view .cc-content-wrapper > h3 > a {
	text-decoration: none;
	color: #981e32;
}
.cahnrs-promo-view .cc-content-wrapper > .cc-excerpt > a,
.cahnrs-promo-view .cc-content-wrapper > .cc-content > a {
	text-decoration: none;
	color: #555;
}

.cahnrs-promo-view .cc-content-wrapper > h3 {
	padding: 0;
	margin: 0 0 6px;
}
.cahnrs-core-column_promo.has_image .cc-image-wrapper {
	width: 50px;
}

.cahnrs-core-column_promo.has_image .cc-content-wrapper {
	margin-left: 65px;
}

/**
 * Accordion/FAQs
 * ----------------------------------------------------------------------------
 */
.pagebuilder-item.widget_cahnrs_faqs {
	background: none;
	padding: 0;
	/* Probably need to accommodate for a title on accordion sections - PC */
}
.cahnrs-core-faq > a {
	background-color: rgba( 255, 255, 255, 0.9 );
	background-image: url(../images/accordion-plus.svg);
	background-position: 95% center;
	background-position: calc(100% - 20px) center;
	background-repeat: no-repeat;
	color: #981e32;
	display: block;
	font-size: 1.1em;
	font-weight: bold;
	margin-bottom: 1px;
	padding: 1em 2em;
}
.cahnrs-core-faq > a.active {
	background-image: url(../images/accordion-x.svg);
}
.cahnrs-core-faq > a:hover {
	background-image: url(../images/accordion-plus-hover.svg);
	color: #c60c30;
}
.cahnrs-core-faq > a.active:hover {
	background-image: url(../images/accordion-x-hover.svg);
}
.cahnrs-core-faq > .cc-content {
	background-color: rgba( 255, 255, 255, 0.9 );
	display: none;
	margin-bottom: 1px;
	padding: 1em 2em;
}
.cahnrs-core-faq > a:nth-of-type(odd),
.cahnrs-core-faq > .cc-content:nth-of-type(odd) {
	background-color: rgba( 239, 240, 241, 0.9 );
}

/**
 * Action Items
 * ----------------------------------------------------------------------------
 */
.pagebuilder-item.widget_cahnrs_action_item {
	background: none;
	padding: 0;
}
.widget_cahnrs_action_item a {
	background: url(../images/action-bg.png) top right no-repeat;
	border-radius: 1px;
	color: #fff;
	clear: both;
	display: block;
	line-height: 42px;
	margin-bottom: 0.8em;
	padding: 0 21px;
	padding: 0 2em;
	white-space: nowrap;
}
.widget_cahnrs_action_item a:hover {
	background-position: bottom right;
	color: white;
}

/**
 * A-Z Index
 * ----------------------------------------------------------------------------
 */
.widget_cahnrs_az_index .cahnrs-azindex-nav {
	border-bottom: 1px solid #ddd;
	margin-bottom: 8px;
}
.widget_cahnrs_az_index .cahnrs-azindex-nav a {
	display: inline-block;
	width: 3.7%;
	padding: 6px 0;
	text-align: center;
	text-transform: uppercase;
	color: #777;
}
.widget_cahnrs_az_index .cahnrs-azindex-nav a.active {
	color: #981e32;
}
.widget_cahnrs_az_index .cahnrs-azindex-nav a.active:hover {
	background: #981e32;
	color: #fff;
}
.widget_cahnrs_az_index .cahnrs-azindex-nav a.selected {
	background: #981e32;
	color: #fff;
}

.widget_cahnrs_az_index .cahnrs-az-column-wrapper.cahnrs-az-collapsed {
	display: none;
}
.widget_cahnrs_az_index .cahnrs-az-column-wrapper.cahnrs-az-collapsed.selected {
	display: block;
}

.widget_cahnrs_az_index .cahnrs-az-column {
	display: inline-block;
	vertical-align: top;
}



.widget_cahnrs_az_index .cahnrs-az-column .inner-column {
	margin: 0 2%;
}
.widget_cahnrs_az_index .az-columns-2 .cahnrs-az-column {
	display: block;
}
.widget_cahnrs_az_index .az-columns-3 .cahnrs-az-column {
	display: inline-block;
	width: 33.33%;
}
.widget_cahnrs_az_index .az-columns-2 .cahnrs-az-column {
	display: inline-block;
	width: 50%;
}
.widget_cahnrs_az_index .az-columns-4 .cahnrs-az-column {
	display: inline-block;
	width: 25%;
}
.widget_cahnrs_az_index .cahnrs-az-column .inner-column > ul > li {
	list-style-type: none;
	padding: 0.4em 0.4em 0.4em 0.8em;
	margin: 0;
}
.widget_cahnrs_az_index .cahnrs-az-column .inner-column > ul > li.is-odd {
	background: #ededed;
}
.widget_cahnrs_az_index .cahnrs-az-column .cahnrs-azindex-header {
	font-size: 1.5em;
	font-weight: bold;
	text-transform: uppercase;
}
.widget_cahnrs_az_index .cahnrs-core-list .cc-title > a {
	font-weight: normal;
	text-decoration: none;
	color: #981e32;
}

/**
 * Custom Gallery
 * ----------------------------------------------------------------------------
 */
.widget_cahnrs_custom_gallery_widget h4 {
	padding-top: 0.2em;
}
.gallery-item-wrapper {
	display: inline-block;
	margin-bottom: 1.5em;
	vertical-align: top;
}
.gallery-item-wrapper img {
	width: 100%;
}
.gallery-item-wrapper h4 {
	padding-bottom: 0.2em;
}
/* ... */

